compiler/testData/diagnostics/tests/extensions/contextReceivers/syntaxError.kt
// RUN_PIPELINE_TILL: FRONTEND
// DIAGNOSTICS: -CONTEXT_RECEIVERS_DEPRECATED
// FIR_IDENTICAL
// LANGUAGE: +ContextReceivers

context(<!SYNTAX!><!>
fun foo() {
}